<resources>
    <string name="app_name">PiliPili</string>

    <string name="title_home_channel">首页&amp;频道</string>
    <string name="title_rank">排行榜</string>
    <string name="title_comic">番剧推荐</string>
    <string name="title_trends">动态</string>

    <string name="title_history">历史记录</string>
    <string name="title_collection">我的收藏</string>
    <string name="title_later">稍后再看</string>
    <string name="title_message">我的消息</string>

    <string name="title_setting">设置</string>
    <string name="title_about">帮助&amp;关于</string>

    <string name="not_login_message">未登陆</string>
    <string name="login_message">登陆账号</string>
    <string name="unknown_failed_message">未知错误</string>
    <string name="login_success_but_get_information_failed">登陆成功，获取用户信息失败</string>
    <string name="vip_name">大会员</string>
    <string name="exit">退出</string>
    <string name="subscribe">关注</string>
    <string name="fans">粉丝</string>
    <string name="trends">动态</string>
    <string name="level">等级</string>
</resources>