<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

    <item
        android:id="@+id/navigation_home_channel"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home_channel" />

    <item
        android:id="@+id/navigation_rank"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_rank" />

    <item
        android:id="@+id/navigation_comic"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_comic" />

    <item
        android:id="@+id/navigation_trends"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_trends" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_collection" />

    <item
        android:id="@+id/navigation_later"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_later" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_message" />

    </group>


</menu>